dcache-view: adapt OIDC login UI to discovery-based config
Modifications

The authorization request built by loginform-with-openid.html read a
full redirect_uri from the oidc-authz-redirect-url config, which had
no default and had to be typed out per-provider in frontend.properties.
Since the callback path is fixed (dcache-view.endpoints.webapi +
auth/callback) and the browser already knows its own origin, derive
redirect_uri from window.location.origin instead, matching what
OidcCodeFlowCallback already reconstructs server-side per request.

Result

less properties in configurations file and workign UI for OIDC self discovery

OIDC client credentials

frontend.authn.oidc.client-id=111
frontend.authn.oidc.client-secret=wqoqo
frontend.authn.oidc.issuer=

dcache-view UI settings

frontend.static!dcache-view.oidc-client-id-list=111
frontend.static!dcache-view.oidc-provider-name-list=

Acked-by: Tigran Mkrtchyan
Target: master.
Require-book: no